Overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,6 @@ body{
   margin: 0px;
 }
 
+html, body {
+  overflow-x: hidden;
+}
